--- a/covid-dashboard/package.json
+++ b/covid-dashboard/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.12",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/core-js": "^2.5.4",
+    "core-js": "^3.8.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "regenerator-runtime": "^0.13.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
